<resources>

    <string name="app_name">eeprom设置</string>
    
    <string name="exit">退出</string>
    
    
    <string name="sn_no">SN号 :</string>
    <string name="writed">写入</string>
    <string name="readed">读出 -></string>
    <string name="read">读出 :</string>
    <string name="batch_no">批次号 :</string>
    <string name="uuid_no">设备码(uuid) :</string>
    <string name="create_and_write">生成并写入</string>
    
    <string name="read_uuid">读出uuid -></string>
    
    <string name="sn_hint">请输入16位的SN号码</string>

    
    <string name="versionName">"版本名称: "</string>
    <string name="versionCode">"版本号: "</string>
    <string name="androidVersion">"Android版本: "</string>
    <string name="SDKVersion">"SDK版本: "</string>
    <string name="open">打开</string>
    <string name="cloundFrameTest">云相框测试</string>
    <string name="radio">收音机</string>
    <string name="music">音乐</string>
    <string name="softwareUpdate">软件升级</string>
    <string name="sdcardStatus">"SD卡状态: "</string>
    <string name="wifiStatus">"wifi状态: "</string>
    <string name="PIR_Count">"收到: "</string>
    <string name="sysLanguage">"系统语言环境: "</string>
    <string name="screenDPI">"屏幕分辨率："</string>
    <string name="dpi">"DPI: "</string>
    <string name="deviceCode">"设备号："</string>
    <string name="snNo">"SN号："</string>
    <string name="batchNo">"批次号："</string>
    <string name="lightSense">"收到:"</string>
    <string name="cloudFrameTest">进入云相框测试</string>
     <string name="cloudFrame_production">云相框生产工具</string>
</resources>
