<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#A0522D" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_horizontal"
                        android:text="云相册生产工具"
                        android:textColor="#97FFFF"
                        android:textSize="70sp" />

                    <TextView
                        android:id="@+id/cloud_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView1"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="90dp"
                        android:textSize="19sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:background="#A2CD5A"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#98FB98"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#8B475D" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/sn_et"
                                android:layout_alignBottom="@+id/sn_et"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="18dp"
                                android:gravity="center"
                                android:text="@string/sn_no"
                                android:textSize="22sp" />

                            <EditText
                                android:id="@+id/sn_et"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="24dp"
                                android:layout_toRightOf="@+id/textView3"
                                android:ems="10"
                                android:hint="@string/sn_hint"
                                android:maxLength="16"
                                android:singleLine="true"
                                android:textSize="22sp" />

                            <Button
                                android:id="@+id/sn_write_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/sn_et"
                                android:layout_alignBottom="@+id/sn_et"
                                android:layout_marginLeft="29dp"
                                android:layout_toRightOf="@+id/sn_et"
                                android:text="@string/writed" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#8B2500" >

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/batch_et"
                                android:layout_alignBottom="@+id/batch_et"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="18dp"
                                android:gravity="center"
                                android:text="@string/batch_no"
                                android:textSize="22sp" />

                            <EditText
                                android:id="@+id/batch_et"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="24dp"
                                android:layout_toRightOf="@+id/textView4"
                                android:ems="10"
                                android:hint="请输入批次号"
                                android:maxLength="16"
                                android:singleLine="true"
                                android:textSize="22sp" />

                            <Button
                                android:id="@+id/batch_write_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignTop="@+id/batch_et"
                                android:layout_marginRight="30dp"
                                android:text="@string/writed" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#8B8B83" >

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="15dp"
                                android:text="@string/uuid_no"
                                android:textSize="22sp" />

                            <Button
                                android:id="@+id/uuid_write_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="80dp"
                                android:layout_toRightOf="@+id/textView2"
                                android:paddingLeft="40dp"
                                android:paddingRight="40dp"
                                android:text="@string/create_and_write" />
                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="#9370DB" >

                        <Button
                            android:id="@+id/A_Key_To"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="填写并一键写入" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#828282"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_CloudPhoto_open"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:text="云相框" />

                    <Button
                        android:id="@+id/btn_radio_open"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:text="收音机" />

                    <Button
                        android:id="@+id/btn_music_open"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:text="音乐" />

                    <Button
                        android:id="@+id/btn_update_open"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:text="升级" />

                    <Button
                        android:id="@+id/btn_camera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:text="相机" />

                    <Button
                        android:id="@+id/btn_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:text="设置" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#7EC0EE"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/key_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="key"
                        android:maxLength="16"
                        android:singleLine="true" >
                    </EditText>

                    <TextView
                        android:id="@+id/sendPIR_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/btn_sendPIR"
                        android:text="收到:" />

                    <TextView
                        android:id="@+id/lightSensor_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/sendPIR_number"
                        android:layout_toRightOf="@+id/btn_lightSensor"
                        android:text="光的强度:" />

                    <Button
                        android:id="@+id/btn_musicplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/btn_sendPIR"
                        android:layout_alignBottom="@+id/btn_sendPIR"
                        android:layout_alignParentLeft="true"
                        android:gravity="center"
                        android:text="音乐播放与暂停" />

                    <Button
                        android:id="@+id/btn_sendPIR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/btn_redled"
                        android:gravity="center"
                        android:text="红外广播" />

                    <Button
                        android:id="@+id/btn_redled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/btn_blueled"
                        android:layout_below="@+id/sendPIR_number"
                        android:gravity="center"
                        android:text="不能点击"
                        android:enabled="false" />

                    <Button
                        android:id="@+id/btn_recorder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/btn_musicplay"
                        android:gravity="center"
                        android:text="录音机" />

                    <Button
                        android:id="@+id/btn_blueled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/sendPIR_number"
                        android:layout_toRightOf="@+id/btn_recorder"
                        android:gravity="center"
                        android:text="进入指示\n灯测试" />

                    <Button
                        android:id="@+id/btn_lightSensor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="22dp"
                        android:layout_toRightOf="@+id/sendPIR_number"
                        android:gravity="center"
                        android:text="光感广播" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" 
                android:background="#F0F8FF"/>

            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="刷新" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>